inde.html updated for github

--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,6 @@
   <title>The HTML5 Test</title>
 </head>
 <body>
-  Test Page - stuff here, another edit
+  Test Page - stuff here, another edit - change for push to github
 </body>
 </html>
